<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTintMode="src_over"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img"
            android:tintMode="screen"
            tools:visibility="visible" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/campus"
                android:textColor="#ffffff"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/points"
                android:textColor="#ffffff"
                android:textSize="32sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/statement"
        android:textColor="#9affffff"
        android:textSize="12sp"
        tools:ignore="SmallSp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff">
            <!--android:theme="@style/EditScreenTextInputLayoutStyle"-->

            <EditText
                android:id="@+id/editID"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:drawableEnd="@drawable/ic_email_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/email"
                android:inputType= "textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff">
            <!--android:theme="@style/EditScreenTextInputLayoutStyle"-->

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:drawableEnd="@drawable/ic_lock_white_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LogIn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:id="@+id/fgtbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#96ffffff"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>